# real-estate-agent

./: .env.example  .gitignore  CLAUDE.md  CURRENT_STATE.md  README.md  package-lock.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_tenant_user_roles.py  0002_lead_ingestion.py  0003_conversations.py  0004_ai_operations.py  0005_integrations_sla_workflow.py  0006_audit_knowledge.py  0007_seed_webhook_sources.py  0008_seed_dev_user.py
apps/api/scripts/: seed_demo.py
apps/api/src/dealflow/: config.py  main.py
apps/api/src/dealflow/api/v1/: router.py
apps/api/src/dealflow/api/v1/routes/: auth.py  health.py  integrations.py  leads.py  metrics.py  settings.py  team.py  webhooks.py
apps/api/src/dealflow/api/v1/schemas/: integrations.py  leads.py  settings.py
apps/api/src/dealflow/core/: auth.py  crypto.py  dependencies.py  errors.py  queue.py  rbac.py
apps/api/src/dealflow/db/: session.py
apps/api/src/dealflow/db/models/: __init__.py  ai_operations.py  audit_knowledge.py  conversations.py  integrations.py  lead_ingestion.py  sla_consent.py  tenant_auth.py  workflow.py
apps/api/src/dealflow/db/repositories/: __init__.py  base.py
apps/api/src/dealflow/services/: __init__.py  audit.py  integrations.py  lead_mutations.py  leads.py  tenant_settings.py  timeline.py  webhooks.py
apps/api/tests/: conftest.py  test_audit_service.py  test_auth.py  test_health.py  test_lead_mutations.py  test_leads_api.py  test_rbac.py  test_repository_base.py  test_tenant_isolation.py  test_tenant_schema.py  test_timeline.py
apps/api/tests/helpers/: jwt_factory.py
apps/web/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(authenticated)/: layout.tsx
apps/web/src/components/layout/: sidebar.tsx  tenant-switcher.tsx  top-nav.tsx  (+1 more)
apps/web/src/lib/: api-client.ts  auth.ts  mock-leads.ts
apps/web/src/types/: leads.ts
apps/worker/: .env.example  Dockerfile  pyproject.toml
apps/worker/src/worker/: db.py  main.py  settings.py
apps/worker/src/worker/jobs/: hubspot_sync.py  llm_score_lead.py  poll_outbox.py  score_lead.py  send_email.py  send_sms.py
apps/worker/src/worker/utils/: crypto.py
apps/worker/tests/: test_hubspot_sync.py  test_llm_score_lead.py  test_poll_outbox.py  test_score_lead.py  test_send_email.py  test_send_sms.py
docs/: DealFlow_AI_Project_Plan_1.xlsx  commands.md  er-diagram.md  ui-testing-guide.md
infra/: docker-compose.override.yml  docker-compose.yml
infra/postgres/: init.sql
scripts/: migrate.sh  reset-db.sh  setup.sh
(+37 files in other folders)
