[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dealflow-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.18",
    "structlog>=24.4.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
prod = []
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "sqlalchemy[mypy]>=2.0.36",
    "anyio>=4.7.0",
    "factory-boy>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dealflow"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B008",   # FastAPI Depends() in function defaults is the intended pattern
    "UP046",  # Generic[T] subclass — new syntax is Python 3.13+ only
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/dealflow --cov-report=term-missing"
markers = [
    "integration: requires running Postgres + Redis (docker compose up)",
]

[tool.coverage.run]
source = ["src/dealflow"]
omit = ["*/migrations/*", "*/tests/*"]
